Apply suggestions from code review
Co-authored-by: Arvin21M <141419722+Arvin21M@users.noreply.github.com>

--- a/data/blog/donating-to-opensats.mdx
+++ b/data/blog/donating-to-opensats.mdx
@@ -1,112 +1,87 @@
 ---
-title: "Navigating Donations to OpenSats: A Comprehensive Guide"
+title: "Navigating Donations to OpenSats"
 date: '2023-09-30'
 tags: ['OpenSats', 'bitcoin', 'fiat', 'donations']
 draft: false
 authors: ['arvin']
 images: ['/static/images/blog/08-nostr-design.jpg']
-summary: "TODO"
+summary: "This step-by-step guide offers clear instructions on how to make tax-deductible or anonymous bitcoin and fiat donations to OpenSats, a 501(c)(3) nonprofit advancing financial and censorship freedom through free open-source software."
 ---
 
-OpenSats champions free & open-source software (FOSS) and Bitcoin projects to advance financial and censorship freedom worldwide. This guide offers comprehensive instructions for donors to make tax-deductible or anonymous contributions supporting [OpenSats' mission](https://opensats.org/mission). With clear steps for one-time or recurring donations, this guide aims to make contributing to OpenSats easy and transparent.
+OpenSats champions free & open-source software (FOSS) to advance financial and censorship freedom worldwide. As a 501(c)(3) public charity, 100% of donations go directly to FOSS projects and contributors. This guide offers clear instructions to easily make tax-deductible or anonymous donations supporting [our mission](https://opensats.org/mission)
 
-You will learn:
+You will learn how to:
 
-- How to donate bitcoin directly through BTCPay Server
-- The process for tax-deductible fiat donations using Stripe
-- Using Donor-Advised Funds to recommend grants to OpenSats
-- Making large bitcoin donations through appraisal and gifting
-- Options for anonymous bitcoin donations
+	1. Make bitcoin donations that are tax-deductible or anonymous.
+	2. Make fiat donations using credit/debit cards, wire transfers, or Donor-Advised Funds.
 
-### Donating Bitcoin Using BTCPay Server
+### Donate Bitcoin
 
-BTCPay Server is a self-hosted, open-source bitcoin payment processor trusted by OpenSats. It allows seamless bitcoin donations, ensuring financial transparency and security.
+OpenSats accepts bitcoin without limitations. Choose to make tax-deductible or anonymous non-tax-deductible donations. Regardless, your bitcoin contributions have tremendous impact, advancing OpenSats' vital work championing financial and censorship freedom.
 
-To donate bitcoin:
+#### Bitcoin Donations Valued Under $5,000:
 
-1. Visit OpenSats’ [Projects donation page](https://opensats.org/projects).
-2. Choose between donating to the General Fund, the Operations Budget, the Nostr Fund, or selecting a specific Listed Project.
-3. Click on "View Details" to learn more, or "Donate" to begin the donation process.
-4. Once you click on "Donate," complete the short donation information form.
-5. Click on the "Donate with Bitcoin" option at the bottom of the form.
-6. You will be redirected to the BTCPay Server payment page.
-7. Scan the QR code or copy/paste the invoice ID into your Bitcoin wallet to send the funds.
-8. The process of donating BTC to OpenSats using BTCPay Server is now complete.
-9. Retain the information for your records.
+	1. Visit [OpenSats' donation page](https://opensats.org/projects) to select a Fund/Project to support.
+	2. Click on **"Donate"** to complete the short donor information form.
+	3. Click on **"Donate with Bitcoin"** at the bottom of the form to be redirected to a secure bitcoin payment portal.
+	4. Send funds using your Bitcoin wallet:
+		- Scan the QR code (Bitcoin or Lightning); OR
+		- Copy/paste the Invoice ID (Lightning) or the Address/Payment Link (Bitcoin).
+		- Note: Donations above $50 have Bitcoin/Lightning options. Donations below $50 will only have Lightning.
+	5. Retain payment confirmation and complete [IRS Form 8283](https://www.irs.gov/forms-pubs/about-form-8283) Section A for your tax filing.
 
-Bear in mind that there are no limitations on bitcoin donations through BTCPay Server, and you can claim a tax deduction for the full market value of the donated bitcoin. As of September 2023, the [IRS treats digital assets](https://www.irs.gov/businesses/small-businesses-self-employed/digital-assets) like Bitcoin as property, and general tax principles applicable to property transactions apply to bitcoin donations.
+#### Bitcoin Donations Valued Over $5,000:
 
-### Donating Fiat Using Stripe
+	1. Visit [OpenSats' donation page](https://opensats.org/projects) to select a Fund/Project to support.
+	2. Determine your donation amount then get your bitcoin appraised by [a reputable apprpaiser](https://charitablesolutionsllc.com/virtual-currency-appraisals/) before returning to OpenSats to resume the next step.
+	3. Click on **"Donate"** to complete the short donor information form.
+	4. Click on **"Donate with Bitcoin"** at the bottom of the form to be redirected to a secure bitcoin payment portal.	
+	5. Send the amount of appraised bitcoin using your Bitcoin wallet:
+		- Scan the QR code (Bitcoin or Lightning); OR
+		- Copy/paste the Invoice ID (Lightning) or the Address/Payment Link (Bitcoin).
+	6. Have the appraisal company complete [IRS Form 8283](https://www.irs.gov/forms-pubs/about-form-8283) Section B for your tax filing.
 
-Stripe is a global payment processor that enables online businesses and platforms to accept payments over the internet. Stripe's secure payment portal allows OpenSats to seamlessly accept fiat donations from supporters.
+#### Anonymous Non-Tax-Deductible Bitcoin Donations:
 
-To donate using Stripe:
+	1. Visit [OpenSats' donation page](https://opensats.org/projects) to select a Fund/Project to support.
+	2. Click on **"Donate"** to complete the short donor information form, answering **"No"** to the question of whether you want the donation to be tax-deductible or not. Leave your name/email blank.
+	3. Click on **"Donate with Bitcoin"** at the bottom of the form to be redirected to a secure bitcoin payment portal.
+	4. Send funds using your Bitcoin wallet:
+		- Scan the QR code (Bitcoin or Lightning); OR
+		- Copy/paste the Invoice ID (Lightning) or the Address/Payment Link (Bitcoin).
+		- Note: Donations above $50 have Bitcoin/Lightning options. Donations below $50 will only have Lightning.
 
-1. Visit OpenSats’ [Projects donation page](https://opensats.org/projects).
-2. Choose between donating to the General Fund, the Operations Budget, the Nostr Fund, or select a specific Project.
-3. Click on the "View Details" to learn more, or "Donate" to begin the donation process.
-4. Once you click on "Donate," complete the short donation information form.
-5. Click on the "Donate with fiat" option at the bottom of the form.
-6. You will be redirected to a secure Stripe payment portal.
-7. Enter your contact and card information to process the payment.
-8. The process of donating fiat to OpenSats using Stripe is now complete.
-9. Retain the information for your records.
+### Donate Fiat
 
-Although Stripe itself does not impose donation limits, your debit card or credit card issuer likely has transaction limitations, typically ranging from $1,000 to $10,000 per transaction. Contact your card issuer to find out your specific limitations. Regardless, you can claim a tax deduction for the full fiat donation amount.
+OpenSats accepts fiat donations through credit/debit cards, wire transfers, and [Donor-Advised Funds (DAFs)](https://www.fidelitycharitable.org/guidance/philanthropy/what-is-a-donor-advised-fund-b723.html). The [DAF Direct](https://www.dafdirect.org/what-is-a-daf/index.html) service we use enables secure, convenient, and no-fee grants to OpenSats. Credit/debit card issuers may limit transaction amounts, typically $1,000-$10,000 per-transaction, so verify your card's per-transaction policy.
 
-### Using Donor-Advised Funds to Make Donations
+#### Credit/Debit Card Donations:
 
-Donor-Advised Funds (DAFs) provide a streamlined way to support non-profit organizations like OpenSats. Using [DAF Direct](https://www.dafdirect.org/what-is-a-daf/index.html), donors can directly recommend grants from their DAF accounts ([Fidelity Charitable®](https://www.fidelitycharitable.org/), [Schwab Charitable®,](https://www.schwabcharitable.org/) or [BNY Mellon Charitable Gift Fund®](https://bnymelloncharitablegiftfund.org/bnym/)) through the OpenSats website, providing a convenient and cost-effective way for donors to recommend grants from their DAFs to OpenSats, with no administration or transaction fees for using the DAF Direct service.
+	1. Visit [OpenSats' donation page](https://opensats.org/projects) to select a Fund/Project to support.
+	2. Click on **"Donate"** to complete the short donation information form.
+	3. Click on **"Donate with fiat"** at the bottom of the form to be redirected to a secure fiat payment portal to enter your credit/debit card details and process the donation.
+	4. Retain the payment confirmation and information for tax filing.
 
-To donate using DAF Direct:
+#### Wire Transfer Donations
 
-1. Visit OpenSats’ [Projects donation page](https://opensats.org/projects).
-2. Choose between donating to the General Fund, the Operations Budget, the Nostr Fund, or select a specific Project.
-3. Click on "View Details" to learn more, or "Donate" to begin the donation process.
-4. Once you click on "Donate," complete the short donation information form.
-5. At the bottom of that short form, you will click on the "Donate with DAF Direct" link.
-6. You will be redirected to the DAF Direct secure web portal to select your DAF organization from the dropdown menu.
-7. Leave the pre-filled designation of "General Fund" as is or enter a new designation in the space provided if necessary.
-8. Enter your donation amount.
-9. Click "Next" within the DAF Direct portal, which will redirect you to your DAF account login page.
-10. Enter your DAF login credentials to log in to your DAF Account.
-11. After a successful login, you must confirm your grant recommendation to OpenSats.
-12. Upon grant recommendation approval, your designated funds will transfer directly to OpenSats.
-13. The process of donating to OpenSats using DAF Direct is now complete.
-14. Retain the information for your records.
+	1. Visit [OpenSats' donation page](https://opensats.org/projects) to select a Fund/Project to support.
+	2. Determine the amount of fiat you want to donate then contact OpenSats at [donate@opensats.org](donate@opensats.org) to request wire instructions, note how much you plan to donate, and tell us which Fund/Project you selected.
+	3. Give wire instructions from OpenSats to your bank to wire the funds.
+	4. Retain the completed wire confirmation and information for tax filing.
 
-### Making Large BTC Donations Using an Appraisal/Gifting Mechanism
+#### Donor-Advised Funds For Donations
 
-For substantial Bitcoin donations, you may choose to donate your bitcoin to OpenSats directly by transferring bitcoin from your wallet to OpenSats treasury holdings wallet by contacting [donate@opensats.org](mailto:donate@opensats.org) with your request. We will reach out to you with details to begin the process.
-
-Donating large sums of bitcoin to OpenSats can also be accomplished through an appraisal and gifting mechanism. This method allows donors to contribute significant Bitcoin holdings to OpenSats.
-
-To donate using Appraisal/Gifting Mechanism:
-
-1. Have your bitcoin [appraised by a reputable company](https://charitablesolutionsllc.com/virtual-currency-appraisals/) to ensure accurate tax deductions for your donation.
-2. Initiate the donation process by [contacting OpenSats](mailto:donate@opensats.org) to discuss and ensure a secure transfer.
-3. Securely transfer your bitcoin from your secure wallet to OpenSats secure treasury wallet.
-4. Obtain a donation receipt from OpenSats detailing the bitcoin amount and its appraised value.
-5. Claim your tax deduction, providing the donation receipt and appraisal as proof.
-6. The process of donating to OpenSats using an appraisal/gifting mechanism is now complete.
-7. Retain the information for your records.
-
-### Anonymous Donations Using Bitcoin
-
-OpenSats honors donor privacy, offering options for anonymous donations using Bitcoin. This allows supporters to contribute to OpenSats’ mission without acknowledgement, ensuring privacy. However, it's important for donors to understand that choosing to donate anonymously means giving up the ability to claim the donation as a tax deduction. Despite this, the impact of your generous contribution will support and advance the initiatives of OpenSats.
-
-To donate Anonymously:
-
-1. Visit OpenSats’ [Projects donation page](https://opensats.org/projects).
-2. Choose between donating to the General Fund, the Operations Budget, the Nostr Fund, or select a specific Project.
-3. Click on the "View Details" to learn more, or "Donate" to begin the donation process.
-4. Mark the "No" option at the top of the form under the question of whether you want the donation to be tax deductible.
-5. Enter your donation amount. Your name and email address are optional at this point.
-6. Click on the "Donate with Bitcoin" option at the bottom of the form.
-7. You will be redirected to the BTCPay Server payment page.
-8. Scan the QR code or copy/paste the invoice ID into your Bitcoin wallet to send the funds.
-9. The process of donating BTC to OpenSats anonymously is now complete.
+	1. Visit [OpenSats' donation page](https://opensats.org/projects) to select a Fund/Project to support.
+	2. Click on **"Donate"** to complete the short donation information form.
+	3. Click on the **"Donate with DAF Direct"** link at the bottom of the form to be redirected to the DAF Direct web portal.
+	4. Select your DAF organization from the dropdown menu, leaving the pre-filled designation of "General Fund" as is or entering a new designation.
+	5. Enter your donation amount then click **"Next"** within the DAF Direct portal to be redirected to your secure DAF account login page.
+	6. Enter your login credentials for your DAF account.
+	7. Upon successful login, confirm/approve your grant recommendation to OpenSats to transfer your designated funds.
+	8. Retain the transfer confirmation and information for tax filing.
 
 ### Conclusion
 
-This guide provides a comprehensive overview of making tax-deductible or anonymous donations to OpenSats through various methods to ensure your contribution is both impactful and financially beneficial. Your valuable support helps OpenSats continue its vital work.
+This was a comprehensive guide to make tax-deductible or anonymous donations supporting OpenSats' mission. We want to make contributing easy and transparent, whether you donate bitcoin, fiat, or use a Donor-Advised Fund. Please reach out to [support@opensats.org](support@opensats.org) if you need help with the donation process. 
+
+As a 501(c)(3) nonprofit, 100% of [your donations](https://opensats.org/projects/opensats_operations_budget) help sustain our work advancing financial and censorship freedom worldwide through free and open-source software (FOSS).
