--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -1,10 +1,10 @@
 ---
 title: Donate
-summary: "Navigating Donations to OpenSats: A Comprehensive Guide"
+summary: "Navigating Donations to OpenSats"
 image: /static/images/avatar.png
 layout: PageLayout
 ---
 
 TODO: add donate buttons, add links to DAF widget, etc.
 
-For details see our blog post: [Navigating Donations to OpenSats: A Comprehensive Guide](/blog/donating-to-opensats)
+For details see our blog post: [Navigating Donations to OpenSats](/blog/donating-to-opensats)
