feat(about): add Lorenzo's npub

--- a/data/authors/lorenzo.mdx
+++ b/data/authors/lorenzo.mdx
@@ -6,6 +6,7 @@ occupation: Volunteer
 company: OpenSats
 email: lorenzo@opensats.org
 github: https://github.com/lollodev
+nostr: npub1w6437490a7p5nj0vpx5u28e6s27v4f6gmttyjnq4ay3mh6hvjjzsyt5zrs
 volunteer: true
 ---
 
