refactored into Members.tsx

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -36,7 +36,7 @@ accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
 ensure the survival of free and open-source technology like Bitcoin.
 
-<BoardMembers/>
+<Members subset='Board'/>
 
 ---
 
@@ -52,7 +52,7 @@ budget which helps OpenSats function and support other FOSS projects and
 contributors in the space, please consider donating to our [Operations
 Budget](https://opensats.org/projects/opensats_operations_budget).
 
-<OpsTeam/>
+<Members subset='Ops'/>
 
 ---
 
@@ -61,7 +61,7 @@ Budget](https://opensats.org/projects/opensats_operations_budget).
 In addition to the operational team, we have a small but dedicated group of
 volunteers that are helping the initiative in a variety of ways.
 
-<Volunteers/>
+<Members subset='Volunteers'/>
 
 ---
 
