--- a/data/blog/will-clark-receives-lts-grant-for-bitcoin-core.mdx
+++ b/data/blog/will-clark-receives-lts-grant-for-bitcoin-core.mdx
@@ -11,7 +11,7 @@ summary: "OpenSats Welcomes Will Clark as an LTS Grantee."
 OpenSats is proud to provide long-term support for [Will
 Clark](https://github.com/willcl-ark). Will is a
 [Chaincode](https://chaincode.com/) alumnus and
-[Qala](https://builders.btrust.tech/) mentor who has been contributing to
+[BTrust (formerly Qala)](https://builders.btrust.tech/) mentor who has been contributing to
 Bitcoin Core for several years.
 
 His main focus areas are issue and PR triage, [contributing fixes][PRs] for
