Don't link paranthesis

--- a/data/blog/will-clark-receives-lts-grant-for-bitcoin-core.mdx
+++ b/data/blog/will-clark-receives-lts-grant-for-bitcoin-core.mdx
@@ -11,8 +11,8 @@ summary: "OpenSats Welcomes Will Clark as an LTS Grantee."
 OpenSats is proud to provide long-term support for [Will
 Clark](https://github.com/willcl-ark). Will is a
 [Chaincode](https://chaincode.com/) alumnus and
-[BTrust (formerly Qala)](https://builders.btrust.tech/) mentor who has been contributing to
-Bitcoin Core for several years.
+[BTrust](https://builders.btrust.tech/) (formerly Qala) mentor who has been
+contributing to Bitcoin Core for several years.
 
 His main focus areas are issue and PR triage, [contributing fixes][PRs] for
 issues and [PR review][reviews], as well as user support and communication. His
