Apply suggestions from code review
Co-authored-by: Arvin21M <141419722+Arvin21M@users.noreply.github.com>

--- a/data/blog/donating-to-opensats.mdx
+++ b/data/blog/donating-to-opensats.mdx
@@ -39,7 +39,7 @@ OpenSats accepts bitcoin without limitations. Choose to make tax-deductible or a
  5. Send the amount of appraised bitcoin using your Bitcoin wallet:
   - Scan the QR code (Bitcoin or Lightning); OR
   - Copy/paste the Invoice ID (Lightning) or the Address/Payment Link (Bitcoin).
- 6. Have the appraisal company complete [IRS Form 8283](https://www.irs.gov/forms-pubs/about-form-8283) Section B for your tax filing.
+ 6. Have the appraisal company complete [IRS Form 8283](https://www.irs.gov/forms-pubs/about-form-8283) Section B for your tax filing, then email this form to [support@opensats.org](support@opensats.org) to complete and return Section B Part V back to you.
 
 #### Anonymous Non-Tax-Deductible Bitcoin Donations
 
@@ -74,7 +74,7 @@ OpenSats accepts fiat donations through credit/debit cards, wire transfers, and 
  1. Visit [OpenSats' donation page](https://opensats.org/projects) to select a Fund/Project to support.
  2. Click on **"Donate"** to complete the short donation information form.
  3. Click on the **"Donate with DAF Direct"** link at the bottom of the form to be redirected to the DAF Direct web portal.
- 4. Select your DAF organization from the dropdown menu, leaving the pre-filled designation of "General Fund" as is or entering a new designation.
+ 4. Select your DAF organization from the dropdown menu, leaving the pre-filled designation of "General Fund" as is or enter a new designation.
  5. Enter your donation amount then click **"Next"** within the DAF Direct portal to be redirected to your secure DAF account login page.
  6. Enter your login credentials for your DAF account.
  7. Upon successful login, confirm/approve your grant recommendation to OpenSats to transfer your designated funds.
