Add "donate" button

--- a/data/authors/lucas.mdx
+++ b/data/authors/lucas.mdx
@@ -22,6 +22,16 @@ making a valuable contribution to the Bitcoin and wider open-source ecosystem.
 
 ---
 
+Please consider donating to our [Operations
+Budget](/projects/opensats_operations_budget) to help cover our operational
+expenses.
+
+<center>
+  <DonateToOperationsButton />
+</center>
+
+---
+
 ### PGP Key
 
 Fingerprint: `CF3A B429 4BE2 D011 0F75 F375 9FCD 0D80 D8A8 9C5A`
