--- a/data/authors/rob.mdx
+++ b/data/authors/rob.mdx
@@ -1,6 +1,6 @@
 ---
 name: Rob
-nym: BoltTC
+nym: BoltC
 avatar: /static/images/ops/rob.jpg
 occupation: Operations Manager
 company: OpenSats
@@ -32,3 +32,63 @@ expenses.
 <center>
   <DonateToOperationsButton />
 </center>
+
+---
+
+### PGP Key
+
+Fingerprint: `63FF E6F7 502E 7030 AD34 6B9F 2DE1 4468 3049 BA9D`
+
+```
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+xsFNBGVSptoBEAC+ORLahDvLl2dJEqV+EwR5oV5ZBf2FOj1DbsW8Avm6wyW6f5Zi
+Eo10Ta+1a9TD8yT3gL/kMLCuMtPBu0TIXZ72LGGraZIVP2s4PcB/+lDcbIDC4vS5
+LPbqCHJv0mMYEU9NBCNg6NfDedgMm+WZcP3jhOEfoseQ+IojIUaHKQxoHSfoWaxS
+UYaBeWOSBKyepaGwKm4pV3NybFEI0GQ0iV+jMJvhUk7RMB6EGow7KLe38FXbzo93
+dXHY2mR2cU2WytlSb5FLTlNcMVTJ9itZpZ4ZhuxISWvNTf6B1FqmXWMOiK5ff/sF
+LRwz2FvJBGqN8Na1fNE/NwRpKWFp5cXp/xan3uZ/RIorqpOdGV40GQ/cRWi1n5lV
+PUqbys1J7jdZ1f2I9c/h9hxo2A1//U8Cb65jHfeRnKO3sa4s2Ld6ueJkI5sikSXx
+bjcdpGnfU9/I+HdVsaK7Skv4PLWgJXQnDtQvVn3GG6eUKvGE16TU7wkyhojXtOlD
+3hrj+tNTRO7iG56u8krJb8uRj+lOu8WPBvx0eIWDfsmD6eql3jh+nkGuYHY9fNDp
+2wQzY9rsy0I3cJkuAIeBBVOHoGqqKkuUPLtqvAuUUM2FLkHiq+mtKNRnkDgEP9tp
+76ymlzNNQHa8aCUSG8/9VAf9ETOEBfBTNPKQttcc8XIL+IEg0fAgAejyZwARAQAB
+zRZSb2IgPHJvYkBvcGVuc2F0cy5vcmc+wsGNBBMBCAA3FiEEY//m91AucDCtNGuf
+LeFEaDBJup0FAmVSptsFCQWjmoACGwMECwkIBwUVCAkKCwUWAgMBAAAKCRAt4URo
+MEm6neoqD/9PxPfW+9WwLp8/4JsfsLrBLKV2hS2Rz+vsLpnT+q616sm7r8+cSXHO
+Z8qLHwEM1mCsGVq5rYt5d5omyy2sm6DoQszMUWAZw2Ae4v0edRVmN/12MkZNhNOj
+4oeJhi4K4yENTLVySxA73JDk+lI36v328cY/VQPFWuPUPIv6PU7/qWt5vmqriNCf
+hKI+PLbcBLB8XXxbP/rYLx8Mr7JoafYw92uPnXCeW4/SLyXdcGhxTbTg0XoRt6ym
+yvVWZ90hAHrOXm2qOnXWRRH3fV4hGtCHNlIAYUM+ZJHdW+qv8S+bY8AyyebdwGDm
+nxYCeYibXSjmZ0xxlXl82z5Hk64u5aXufoAAI+qpziUaaySgY/wZA3iX5GbTItmI
+XOuC3ERJiZ0by/nFZVSq4BPWHomTSlWyvecI/guj10jNdjxPv3iEOdl2GHAhLRsO
+Gh30zMWLobyWQ6wZiuQPzvIMQxSZHmJaZKWgtlkQnvNvrK4nUQd+h6yewPlriNPh
+KQYkOgEBOGzMMj9ldwMQ/3VMnt2cmLXNY6/cGd+Xmfsg3pO/qmCdNMtd+PKuY66p
+I/xnhRgK/c7RiQMz3Cy3eNFTx+l0dzUlfMaNwaATR7dheYAPzpfvF4zDEOrYdQoN
+FBHTtOA6T95irS5Nna2C74IMF1GS5JS6Erte7ruZDAL3+6BVDszy+c7BTQRlUqbb
+ARAA9f0ZO9H7lLJ5ny8dAmwkz6Ow7QzKs8hwqnsJThjMlRoTKaloJm72j0i7nuoA
+89nFJdWr7Kb6XiTAba8HGiNQy1bOrHMw8ZIiRK/kFpFCVo+IcypPrTj0W1Eq/KBC
+pbw7sGiQBqlCJw9jQFsBGjOq9643M94c2Je9UBjH4+cNcvzkeZqcGYTZpVGwQv0q
+t+Q4bj/3Z5mbW8vBt4NSB0CyOQtM2poQrXXYLBjE6gsh5hF7zAh76pC6R/oY9sbs
+qdqD+kzpCTzr6YTMst1LqIJdjkr06+4XkLkJ0uVjlSmVi7UckTqJbeNXpsogy1kV
+/nE0vpi+my52M0ORwQax0SBpvsuc1LTOygBTOk8a1SNKM1mtnjK+DbRTE+P8hCv6
+3vaSiR9+nC9suSlL6bglY/XV9Xso+zeEmh54YFNvI8R+CfOF4dddnECJGm35g9hH
+lO425m0Nvn/GKmHJNLw03VR4JkbpCzZcX37R4Iz3npEoH10KIAjD26Wddo+9P3rE
+7k1hR3bxntQb6qEUtl2TLIHDS3MV0v+d3oq58VqwyPMKYo1orYtOqFMBG8WywUhf
+afxocKc9wPgqikpl378kiorJSXFZMNC0g5Hq5QJ7BxdIjiMjyk8ZSDwd6BSPRD6n
+YhRV3RukOba7MkJKp8yuNLW9srPx1U8EyEAVSgtA6vRj2zEAEQEAAcLBfAQYAQgA
+JhYhBGP/5vdQLnAwrTRrny3hRGgwSbqdBQJlUqbdBQkFo5qAAhsMAAoJEC3hRGgw
+SbqdWHkP/jmP7v5jlreqqSlhreknqhLPI1+7joq3aMN6cvdRfN8xfltzBy7gPuRZ
+IGh7mnky7BKWxsPEd3RpNo4fUr6+ZglRrvmMm5sxphZiM1ogQEE5dQSxf+C2ju8a
+D7U4uK0gBrjsvdztyIDDyyb05y5In9mQxnfZV3XZoH8lWTC9fiq5PliRnCTLElQH
+8id24orlalEv3Na1XZL0pf6GiaPdWBk3COTQJ5j9xzbyJt6TgpnMZKwMnbAf9OZO
+OI3UTsiBArN31qXkPHIyY3bsKZtbIy6iJcvuXQK8/fCEyYMjnItak0o1I/5Kq6RM
+a+MP5HKilbJvZh0UFtEd93zMhqB2YZj4HyNW/LNS0N16icbPINC5usqTtC2QGFQQ
+Vz3UNDWHUYK0d4ZO0SC2/QB+Q9M5APxk5MFPGwCRhpSJ/NMtTBEy4wj5QcQCazSw
+hNAdcjjA6Uyryw+QGLbO1wWX+QE9JAiSiqM0mcadZiu4iBO9r8IuhwL+6rYnZkyP
+yQL2d34eVPnM0ulnO6SGefE2nGQ/FDDwQtnKVCeEl2pzB5nyBrLDCcAIuW259sYr
+nMrGDU0OC8oOqbOEiopE/td6ffKGyiTZVpuRFs1crkXcxSobEkW4PyvZ1KgEImh4
+afE4O5txpLdG0jXnuYOyaOPfqKV/C4a1t11m3XTwk31Q6pQsIMG6
+=fxH2
+-----END PGP PUBLIC KEY BLOCK-----
+```
