feat(donate): add non-modal form for General Fund

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -10,3 +10,5 @@ TODO: add donate buttons, add links to DAF widget, etc.
 [Donate via DAF Direct](https://www.dafdirect.org/DAFDirect/daflink?_dafdirect_settings=ODUyNzIyMjQ5XzIxMTFfMjU4NjM2NDMtZGUxYS00Yjc1LTk4NGEtM2U0MTg5ZjZjZmEz&designatedText=&amountValue=)
 
 For details see our blog post: [Navigating Donations to OpenSats](/blog/donating-to-opensats)
+
+<DonateToGeneralFundForm/>
