feat(donate): add filler text

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -5,10 +5,42 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-TODO: add donate buttons, add links to DAF widget, etc.
+Morbi non est neque. In gravida nibh urna, eget interdum ligula porttitor et. Aenean blandit arcu sed urna rutrum sodales. Phasellus volutpat dui a magna facilisis, sit amet vehicula mi pretium. Maecenas blandit vitae nunc pharetra gravida. Duis eget lorem quis nisl rutrum ornare. Proin porta odio molestie mi iaculis interdum. Donec posuere pharetra ante sed lacinia.
 
-[Donate via DAF Direct](https://www.dafdirect.org/DAFDirect/daflink?_dafdirect_settings=ODUyNzIyMjQ5XzIxMTFfMjU4NjM2NDMtZGUxYS00Yjc1LTk4NGEtM2U0MTg5ZjZjZmEz&designatedText=&amountValue=)
+# Donate to General Fund
 
-For details see our blog post: [Navigating Donations to OpenSats](/blog/donating-to-opensats)
+Fill out the form below to donate to the OpenSats General Fund. Most of our
+grants as well as our long-term support program are sourced from this fund.
 
 <DonateToGeneralFundForm/>
+
+# DAF - Donor-Advised Fund
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id risus at neque
+blandit lacinia. Praesent molestie vitae nibh sed ultrices. Donec volutpat
+tempor metus, non dignissim orci. Nunc sed ipsum eu turpis interdum mollis.
+Phasellus eu tellus vel est auctor volutpat id a justo. Etiam neque ex, cursus
+non vestibulum sed, dictum non lectus. Proin et sollicitudin dolor, vitae rutrum
+massa.
+
+- [Donate via DAF Direct](https://www.dafdirect.org/DAFDirect/daflink?_dafdirect_settings=ODUyNzIyMjQ5XzIxMTFfMjU4NjM2NDMtZGUxYS00Yjc1LTk4NGEtM2U0MTg5ZjZjZmEz&designatedText=&amountValue=)
+
+Cras lacus purus, porttitor ut enim vel, rutrum rhoncus nibh. Ut interdum
+sapien eget euismod ullamcorper. Integer leo risus, mattis id rhoncus sit amet,
+sagittis euismod sapien. Interdum et malesuada fames ac ante ipsum primis in
+faucibus. Donec in ex eros. Nam faucibus diam est, id pulvinar lacus congue
+quis. Sed cursus convallis nulla. Vivamus a tempor est. Suspendisse potenti.
+
+# OpenSats Operations
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id risus at neque
+blandit lacinia. Praesent molestie vitae nibh sed ultrices. 
+
+<DonateToOperationsButton/>
+
+Cras lacus purus, porttitor ut enim vel, rutrum rhoncus nibh. Ut interdum
+sapien eget euismod ullamcorper.
+
+---
+
+For more information regarding the various ways you can facilitate donations please see our blog post [Navigating Donations to OpenSats](/blog/donating-to-opensats)
