style(donate): update headlines & order, add separators

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -7,6 +7,8 @@ layout: PageLayout
 
 Morbi non est neque. In gravida nibh urna, eget interdum ligula porttitor et. Aenean blandit arcu sed urna rutrum sodales. Phasellus volutpat dui a magna facilisis, sit amet vehicula mi pretium. Maecenas blandit vitae nunc pharetra gravida. Duis eget lorem quis nisl rutrum ornare. Proin porta odio molestie mi iaculis interdum. Donec posuere pharetra ante sed lacinia.
 
+---
+
 # Donate to General Fund
 
 Fill out the form below to donate to the OpenSats General Fund. Most of our
@@ -14,7 +16,21 @@ grants as well as our long-term support program are sourced from this fund.
 
 <DonateToGeneralFundForm/>
 
-# DAF - Donor-Advised Fund
+---
+
+# Donate to Operations Budget
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id risus at neque
+blandit lacinia. Praesent molestie vitae nibh sed ultrices. 
+
+<DonateToOperationsButton/>
+
+Cras lacus purus, porttitor ut enim vel, rutrum rhoncus nibh. Ut interdum
+sapien eget euismod ullamcorper.
+
+---
+
+# Donate via Donor-Advised Fund
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id risus at neque
 blandit lacinia. Praesent molestie vitae nibh sed ultrices. Donec volutpat
@@ -30,16 +46,6 @@ sapien eget euismod ullamcorper. Integer leo risus, mattis id rhoncus sit amet,
 sagittis euismod sapien. Interdum et malesuada fames ac ante ipsum primis in
 faucibus. Donec in ex eros. Nam faucibus diam est, id pulvinar lacus congue
 quis. Sed cursus convallis nulla. Vivamus a tempor est. Suspendisse potenti.
-
-# OpenSats Operations
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id risus at neque
-blandit lacinia. Praesent molestie vitae nibh sed ultrices. 
-
-<DonateToOperationsButton/>
-
-Cras lacus purus, porttitor ut enim vel, rutrum rhoncus nibh. Ut interdum
-sapien eget euismod ullamcorper.
 
 ---
 
