feat(donate): add content

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -1,18 +1,14 @@
 ---
-title: Donate
+title: Donate to OpenSats
 summary: "Navigating Donations to OpenSats"
 image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Morbi non est neque. In gravida nibh urna, eget interdum ligula porttitor et. Aenean blandit arcu sed urna rutrum sodales. Phasellus volutpat dui a magna facilisis, sit amet vehicula mi pretium. Maecenas blandit vitae nunc pharetra gravida. Duis eget lorem quis nisl rutrum ornare. Proin porta odio molestie mi iaculis interdum. Donec posuere pharetra ante sed lacinia.
+Fill out the form below to donate to our [General Fund][gf]. Most of our
+grants as well as our long-term support program are sourced from this fund.
 
 ---
-
-# Donate to General Fund
-
-Fill out the form below to donate to the OpenSats General Fund. Most of our
-grants as well as our long-term support program are sourced from this fund.
 
 <DonateToGeneralFundForm/>
 
@@ -20,13 +16,16 @@ grants as well as our long-term support program are sourced from this fund.
 
 # Donate to Operations Budget
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id risus at neque
-blandit lacinia. Praesent molestie vitae nibh sed ultrices. 
+We don't take a cut from donations to open-source projects. Consequently, we
+have to raise money for our operational expenses separately. Please donate to
+our [Operations Budget][ob] to keep OpenSats alive.
 
+<center>
 <DonateToOperationsButton/>
+</center>
 
-Cras lacus purus, porttitor ut enim vel, rutrum rhoncus nibh. Ut interdum
-sapien eget euismod ullamcorper.
+If you would like to facilitate a substantial donation or support us on a
+recurring basis, please reach out to donate@opensats.org.
 
 ---
 
@@ -50,3 +49,6 @@ quis. Sed cursus convallis nulla. Vivamus a tempor est. Suspendisse potenti.
 ---
 
 For more information regarding the various ways you can facilitate donations please see our blog post [Navigating Donations to OpenSats](/blog/donating-to-opensats)
+
+[gf]: /projects/general_fund
+[ob]: /projects/opensats_operations_budget
