feat(donate): at DAF text

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -5,8 +5,8 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Fill out the form below to donate to our [General Fund][gf]. Most of our
-grants as well as our long-term support program are sourced from this fund.
+Fill out the form below to donate to our [General Fund][gf]. Most of our grants
+as well as our long-term support program are sourced from this fund.
 
 ---
 
@@ -31,24 +31,48 @@ recurring basis, please reach out to donate@opensats.org.
 
 # Donate via Donor-Advised Fund
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id risus at neque
-blandit lacinia. Praesent molestie vitae nibh sed ultrices. Donec volutpat
-tempor metus, non dignissim orci. Nunc sed ipsum eu turpis interdum mollis.
-Phasellus eu tellus vel est auctor volutpat id a justo. Etiam neque ex, cursus
-non vestibulum sed, dictum non lectus. Proin et sollicitudin dolor, vitae rutrum
-massa.
+You can donate to OpenSats via a donor-advised fund. To quote our friends from [Brink][brink]:
 
-- [Donate via DAF Direct](https://www.dafdirect.org/DAFDirect/daflink?_dafdirect_settings=ODUyNzIyMjQ5XzIxMTFfMjU4NjM2NDMtZGUxYS00Yjc1LTk4NGEtM2U0MTg5ZjZjZmEz&designatedText=&amountValue=)
+> A [donor-advised fund (DAF)][daf] is a private fund administered by a third party and
+> created for the purpose of managing charitable donations on behalf of an
+> organization, family, or individual.
+>
+> DAFs have become increasingly popular, primarily because they offer the donor
+> greater ease of administration, while still allowing the donor to maintain
+> significant control over the placement and distribution of charitable gifts. In
+> addition, companies are able to offer this service to clients at a lower cost
+> than if the funds were handled privately.
 
-Cras lacus purus, porttitor ut enim vel, rutrum rhoncus nibh. Ut interdum
-sapien eget euismod ullamcorper. Integer leo risus, mattis id rhoncus sit amet,
-sagittis euismod sapien. Interdum et malesuada fames ac ante ipsum primis in
-faucibus. Donec in ex eros. Nam faucibus diam est, id pulvinar lacus congue
-quis. Sed cursus convallis nulla. Vivamus a tempor est. Suspendisse potenti.
+There are several benefits to donating through a DAF:
+- It allows the donor to better manage their tax burden. For example, the donor may choose to donate a large sum to maximize deductions in one tax year, and then spread out their charitable giving from the fund over multiple years.
+- Any growth in the value of the fund is tax exempt.
+- It’s easy to donate [Bitcoin][daf-btc] (or other appreciated assets) to the fund while not incurring capital gains tax.
+
+By donating Bitcoin through your DAF, you will receive the tax-deductible
+benefit for the value of the Bitcoin, but Brink will receive USD, not Bitcoin.
+For more details, please contact your DAF portfolio manager.
+
+The three largest DAFs are  [Fidelity
+Charitable](https://www.fidelitycharitable.org/),  [Schwab
+Charitable](https://www.schwabcharitable.org/)  and  [BNY Mellon Charitable Gift
+Fund](https://bnymelloncharitablegiftfund.org/bnym/). All three can accept
+Bitcoin donations.
+
+If you have an established account with one of the above-mentioned funds, then
+you can  [donate directly to OpenSats through your DAF][daf-direct].
+
+If you’d like to learn more about the ways a DAF fund might be useful in your
+giving portfolio, contact donate@opensats.org or the investment manager of your
+DAF.
 
 ---
 
-For more information regarding the various ways you can facilitate donations please see our blog post [Navigating Donations to OpenSats](/blog/donating-to-opensats)
+For more information regarding the various ways you can donate please see our
+blog post [Navigating Donations to OpenSats](/blog/donating-to-opensats).
 
 [gf]: /projects/general_fund
 [ob]: /projects/opensats_operations_budget
+[daf]: https://www.investopedia.com/terms/d/donoradvisedfund.asp
+[daf-btc]: https://www.fidelitycharitable.org/giving-account/what-you-can-donate/donating-bitcoin-to-charity.html
+[daf-direct]: https://www.dafdirect.org/DAFDirect/daflink?_dafdirect_settings=ODUyNzIyMjQ5XzIxMTFfMjU4NjM2NDMtZGUxYS00Yjc1LTk4NGEtM2U0MTg5ZjZjZmEz&designatedText=&amountValue=
+[brink]: https://brink.dev/blog/2021/03/26/donate-bitcoin/#donate-bitcoin-directly-to-brink
