style(donate): re-order sections

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -8,24 +8,7 @@ layout: PageLayout
 Fill out the form below to donate to our [General Fund][gf]. Most of our grants
 as well as our long-term support program are sourced from this fund.
 
----
-
 <DonateToGeneralFundForm/>
-
----
-
-# Donate to Operations Budget
-
-We don't take a cut from donations to open-source projects. Consequently, we
-have to raise money for our operational expenses separately. Please donate to
-our [Operations Budget][ob] to keep OpenSats alive.
-
-<center>
-<DonateToOperationsButton/>
-</center>
-
-If you would like to facilitate a substantial donation or support us on a
-recurring basis, please reach out to donate@opensats.org.
 
 ---
 
@@ -49,8 +32,8 @@ There are several benefits to donating through a DAF:
 - It’s easy to donate [Bitcoin][daf-btc] (or other appreciated assets) to the fund while not incurring capital gains tax.
 
 By donating Bitcoin through your DAF, you will receive the tax-deductible
-benefit for the value of the Bitcoin, but Brink will receive USD, not Bitcoin.
-For more details, please contact your DAF portfolio manager.
+benefit for the value of the Bitcoin, but OpenSats will receive USD, not
+Bitcoin. For more details, please contact your DAF portfolio manager.
 
 The three largest DAFs are  [Fidelity
 Charitable](https://www.fidelitycharitable.org/),  [Schwab
@@ -64,6 +47,21 @@ you can  [donate directly to OpenSats through your DAF][daf-direct].
 If you’d like to learn more about the ways a DAF fund might be useful in your
 giving portfolio, contact donate@opensats.org or the investment manager of your
 DAF.
+
+---
+
+# Donate to Operations Budget
+
+We don't take a cut from donations to open-source projects. Consequently, we
+have to raise money for our operational expenses separately. Please donate to
+our [Operations Budget][ob] to keep OpenSats alive.
+
+<center>
+<DonateToOperationsButton/>
+</center>
+
+If you would like to facilitate a substantial donation or support us on a
+recurring basis, please reach out to donate@opensats.org.
 
 ---
 
