--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -123,11 +123,11 @@ passthrough.
 
 ## Tell me more about your board. How does it work?
 
-We have nine board members and we vote by majority. All standard decisions (like
-which new projects are added to the website or which projects will receive
-grants allocated from the general fund) are made by simple majority (5-4), while
-board-related changes will require 6-3 majority. New members to the board will
-be announced publicly.
+We have [nine board members](/about/#board-of-directors) and we vote by
+majority. All standard decisions (like which new projects are added to the
+website or which projects will receive grants allocated from the general fund)
+are made by simple majority (5-4), while board-related changes will require 6-3
+majority. New members to the board will be announced publicly.
 
 ## Are you really 100% passthrough?
 
