fix(about): grammar

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -30,7 +30,7 @@ public access to Bitcoin infrastructure.
 
 # Board of Directors
 
-We didn't want any one person or small group to have control of the decision
+We don't want any one person or small group to have control of the decision
 making process of OpenSats, so we created a transparent, public-facing, and
 accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
